@@ -35,7 +35,7 @@ a img {
  ! - <P></P></LI>
  ! - </UL>
   -->
-<DT>XXXX-XX-XX
+<DT>2012-01-03
 <DD>
 <UL>
 <LI>Works now with standard versions of Coq (&GT;= 8.4beta)
@@ -67,6 +67,8 @@ sequent and proof command displays</LI>
 <P></P></LI>
 </UL>
 
+<!-- RECENT CHANGES END -->
+
 <DT>2011-10-04
 <DD>
 <UL>
@@ -74,8 +76,6 @@ sequent and proof command displays</LI>
 <LI>several bug fixes
 <P></P></LI>
 </UL>
-
-<!-- RECENT CHANGES END -->
 
 <DT>2011-08-11
 <DD>
@@ -149,7 +149,7 @@ far as possible)
 <HR noshade size=2>
 <FONT SIZE="-2">
 last changed on 
-<!-- hhmts start --> 2 Jan 2012
+<!-- hhmts start --> 3 Jan 2012
 <!-- hhmts end -->
 by <A HREF="/index.html.en">Hendrik</A>
 </FONT></BODY> </HTML>
